crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@108.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 'Wed Jul 11 10:51:14 PST-03:00 2001'::timestamptz;"
---
SelectStmt@0..57
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..56
    TypeCast@7..56
      AConst@7..43
        Sconst@7..43 "'Wed Jul 11 10:51:14  ..."
      Typecast@43..45 "::"
      TypeName@45..56
        Ident@45..56 "timestamptz"
  Ascii59@56..57 ";"

