crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@110.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT d1 FROM TIMESTAMPTZ_TBL;
---
SelectStmt@0..31
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..9
    ColumnRef@7..9
      Ident@7..9 "d1"
  Whitespace@9..10 " "
  From@10..14 "FROM"
  Whitespace@14..15 " "
  RangeVar@15..30
    Ident@15..30 "TIMESTAMPTZ_TBL"
  Ascii59@30..31 ";"

