crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@112.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '4714-11-23 16:00:00-08 BC'::timestamptz;"
---
SelectStmt@0..48
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..47
    TypeCast@7..47
      AConst@7..34
        Sconst@7..34 "'4714-11-23 16:00:00- ..."
      Typecast@34..36 "::"
      TypeName@36..47
        Ident@36..47 "timestamptz"
  Ascii59@47..48 ";"

