crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@116.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '294276-12-31 15:59:59-08'::timestamptz;"
---
SelectStmt@0..47
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..46
    TypeCast@7..46
      AConst@7..33
        Sconst@7..33 "'294276-12-31 15:59:5 ..."
      Typecast@33..35 "::"
      TypeName@35..46
        Ident@35..46 "timestamptz"
  Ascii59@46..47 ";"

